# mal-cli

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  init.rs  lib.rs  list.rs  main.rs  mal.rs  season.rs
