[package]
name = "mal-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
open = "2.0"
tiny_http = "0.11"
serde_json = "1.0"
inquire = "0.6.2"
dotenv = "0.15.0"
async-recursion = "1.0.5"